implement inactive pet dynamic (and time creation date)